--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="yandex-verification" content="d4c0611e641252cc" />
     <title>Гайды по Genshin Impact</title>
     <link rel="stylesheet" href="style.css">
 </head>
